fix: prevent modal from overflowing the screen

--- a/src/components/atoms/modal.module.css
+++ b/src/components/atoms/modal.module.css
@@ -1,5 +1,6 @@
 .modal {
   position: relative;
+  max-width: calc(100vw - var(--ye-spacing-rem-normal) * 2);
   margin: auto;
   padding: var(--ye-spacing-rem-normal);
   overflow: hidden;
